--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Encripter / Desencripter</title>
+  <title>Encrypter Alura</title>
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="img/encripter.png" type="image/x-icon">
@@ -16,10 +16,10 @@
   </header>
   <main class="main__container">
     <form class="form">
-      <textarea class="form__frase" id="frase" placeholder="Ingrese el texto aqui......" required></textarea>
+      <textarea class="form__frase" id="frase" placeholder="Ingrese un texto por favor......" required></textarea>
       <div class="form__sugerencia">
         <span class="form__icon"><img src="img/icon.svg"></span>
-        <p class="form__parrafo">Solo letras minúsculas y sin acentos</p>
+        <p class="form__parrafo">Ingrese letras minúsculas y sin acentos</p>
       </div>
       <div class="btn__container">
         <input class="btn btn-encriptar" id="btn-encriptar" type="button" value="Encriptar">
@@ -29,8 +29,8 @@
     <section class="desencriptar">
       <div class="desencriptar__mensaje">
         <img class="desencriptar__mensaje__img-muñeco" src="img/muñeco.svg" alt="Muñeco Ilustración">
-        <h2 class="desencriptar__mensaje__titulo">Ningún mensaje fue encontrado</h2>
-        <p class="desencriptar__mensaje__parrafo">Ingresa el texto que desees encriptar o desencriptar.</p>
+        <h2 class="desencriptar__mensaje__titulo">No se encontró ningún mensaje.........</h2>
+        <p class="desencriptar__mensaje__parrafo">Ingresa el texto por favor </p>
       </div>
       <div class="desencriptar__resultado">
         <textarea class="frase-encriptada" id="frase-encriptada" readonly></textarea>
